--- a/index.html
+++ b/index.html
@@ -76,9 +76,8 @@
     </header>
 
     <div id="quick-menu" class="fixed right-4 md:right-8 bottom-8 md:bottom-auto md:top-1/2 md:-translate-y-1/2 z-50 flex flex-col gap-2 transition-opacity duration-300 opacity-0 pointer-events-none">
-      <a href="#" class="flex flex-col items-center justify-center w-14 h-14 md:w-16 md:h-16 bg-[#FEE500] hover:bg-[#FDD835] text-slate-900 rounded-full md:rounded-xl shadow-lg transition-transform hover:scale-110 group relative"><i data-lucide="message-circle" class="w-6 h-6 mb-0.5"></i><span class="text-[10px] font-bold hidden md:block">Kakao</span><span class="absolute right-full mr-3 bg-slate-800 text-white text-xs py-1 px-2 rounded opacity-0 group-hover:opacity-100 transition-opacity whitespace-nowrap hidden md:block">카카오톡 상담</span></a>
-      <a href="https://blog.naver.com/chamzeon" target="_blank" class="hidden md:flex flex-col items-center justify-center w-16 h-16 bg-[#03C75A] hover:bg-[#02b150] text-white rounded-xl shadow-lg transition-transform hover:scale-110 group relative"><span class="font-black text-xl mb-0.5">N</span><span class="text-[10px] font-bold">Blog</span><span class="absolute right-full mr-3 bg-slate-800 text-white text-xs py-1 px-2 rounded opacity-0 group-hover:opacity-100 transition-opacity whitespace-nowrap">공식 블로그</span></a>
-      <a href="https://www.youtube.com/@chamzeon" target="_blank" class="hidden md:flex flex-col items-center justify-center w-16 h-16 bg-[#FF0000] hover:bg-[#D30000] text-white rounded-xl shadow-lg transition-transform hover:scale-110 group relative"><i data-lucide="monitor-play" class="w-6 h-6 mb-0.5"></i><span class="text-[10px] font-bold">TV</span><span class="absolute right-full mr-3 bg-slate-800 text-white text-xs py-1 px-2 rounded opacity-0 group-hover:opacity-100 transition-opacity whitespace-nowrap">참좋은 TV</span></a>
+      <a href="https://pf.kakao.com/_xkFTPn" target="_blank" class="flex flex-col items-center justify-center w-14 h-14 md:w-16 md:h-16 bg-[#FEE500] hover:bg-[#FDD835] text-slate-900 rounded-full md:rounded-xl shadow-lg transition-transform hover:scale-110 group relative"><i data-lucide="message-circle" class="w-6 h-6 mb-0.5"></i><span class="text-[10px] font-bold hidden md:block">Kakao</span><span class="absolute right-full mr-3 bg-slate-800 text-white text-xs py-1 px-2 rounded opacity-0 group-hover:opacity-100 transition-opacity whitespace-nowrap hidden md:block">카카오톡 상담</span></a>
+      <a href="https://naver.me/x8twC7ua" target="_blank" class="hidden md:flex flex-col items-center justify-center w-16 h-16 bg-[#03C75A] hover:bg-[#02b150] text-white rounded-xl shadow-lg transition-transform hover:scale-110 group relative"><span class="font-black text-xl mb-0.5">N</span><span class="text-[10px] font-bold">Blog</span><span class="absolute right-full mr-3 bg-slate-800 text-white text-xs py-1 px-2 rounded opacity-0 group-hover:opacity-100 transition-opacity whitespace-nowrap">공식 블로그</span></a>
       <a href="location.html" class="hidden md:flex flex-col items-center justify-center w-16 h-16 bg-white hover:bg-slate-50 text-slate-800 border border-slate-200 rounded-xl shadow-lg transition-transform hover:scale-110 group relative"><i data-lucide="map-pin" class="w-6 h-6 mb-0.5 text-amber-600"></i><span class="text-[10px] font-bold">Map</span><span class="absolute right-full mr-3 bg-slate-800 text-white text-xs py-1 px-2 rounded opacity-0 group-hover:opacity-100 transition-opacity whitespace-nowrap">오시는 길</span></a>
       <a href="tel:055-351-3581" class="md:hidden flex flex-col items-center justify-center w-14 h-14 bg-amber-600 hover:bg-amber-700 text-white rounded-full shadow-lg transition-transform hover:scale-110"><i data-lucide="phone" class="w-6 h-6"></i></a>
       <button id="scroll-top-btn" class="flex flex-col items-center justify-center w-14 h-14 md:w-16 md:h-16 bg-slate-800 hover:bg-slate-700 text-white rounded-full md:rounded-xl shadow-lg transition-transform hover:scale-110 mt-2"><i data-lucide="arrow-up" class="w-6 h-6"></i><span class="text-[10px] font-bold hidden md:block">TOP</span></button>
@@ -100,7 +99,7 @@
                                 <div>
                                     <div class="text-amber-500 font-bold text-xs tracking-widest uppercase mb-1">Total Neutering Cases</div>
                                     <div class="flex items-start gap-1">
-                                        <span class="text-5xl font-serif font-bold text-white counter-value" data-target="19">0</span>
+                                        <span class="text-5xl font-serif font-bold text-white counter-value" data-target="30">0</span>
                                         <span class="text-amber-500 text-3xl mt-1">+</span>
                                     </div>
                                 </div>
@@ -185,9 +184,7 @@
     </main>
 
     <footer id="contact" class="bg-slate-900 text-slate-300">
-        <div class="w-full h-96 bg-slate-200 relative">
-            <iframe title="참좋은동물병원 위치" src="https://maps.google.com/maps?q=경남%20밀양시%20밀양대로%201896&t=&z=16&ie=UTF8&iwloc=&output=embed" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" class="w-full h-full" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div>
+        <div class="w-full h-96 bg-slate-200 relative"><iframe title="참좋은동물병원 위치" src="https://maps.google.com/maps?q=경남%20밀양시%20밀양대로%201896&t=&z=16&ie=UTF8&iwloc=&output=embed" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" class="w-full h-full transition-all duration-700" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-16">
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-12">
                 <div><h3 class="text-2xl font-serif font-bold text-white mb-6">참좋은동물병원</h3><p class="text-slate-400 text-sm leading-relaxed mb-6">참좋은동물병원은 생명을 존중하는 마음으로 최상의 진료 서비스를 제공합니다.</p></div>
